[package]
name = "x64dbg_ext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["dylib"]

[dependencies]
# waiting for: https://github.com/luyikk/dbg64_plugins/pull/1
x64dbg_sdk_sys = { git = "https://github.com/expend20/dbg64_plugins", branch = "update-01-09-2022" }
iced-x86 = "1.17.0"
unicorn-engine = "2.0.0"
lazy_static = "1"
